--- a/html/series-detail.html
+++ b/html/series-detail.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV show | details</title>
+    <script defer src="/cinetech/scripts/series-details.js"></script>
+    <link rel="stylesheet" href="/cinetech/style/series-detail.css">
 </head>
 <body>
     <div id="tv-details">
-        
+
     </div>
 </body>
 </html>
