changement nom des fichier details et ajout de la page film

--- a/html/film.html
+++ b/html/film.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/cinetech/style/series.css">
-    <script defer src="/cinetech/scripts/serie.js"></script>
+    <script defer src="/cinetech/scripts/film.js"></script>
     <title>Cinétech | série</title>
 </head>
 <body>
-    <h1>Trending TV shows</h1>
+    <h1>Trending Movies</h1>
     <div id="tv-list">
         
     </div>
