--- a/html/detail-serie.html
+++ b/html/detail-serie.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV show | details</title>
-    <script defer src="/cinetech/scripts/series-details.js"></script>
-    <link rel="stylesheet" href="/cinetech/style/series-detail.css">
+    <script defer src="/cinetech/scripts/serie-details.js"></script>
+    <link rel="stylesheet" href="/cinetech/style/detail.css">
 </head>
 <body>
     <div id="tv-details">
