HTML ajout  <div id="search-results">
HTML ajout  <div id="search-results">

--- a/html/serie-detail.html
+++ b/html/serie-detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV show | details</title>
-    <script defer src="scripts/detail-film.js"></script>
+    <script defer src="scripts/serie-details.js"></script>
     <link rel="stylesheet" href="style/detail.css">
 </head>
 <header>
