--- a/html/film.html
+++ b/html/film.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/cinetech/style/series.css">
-    <script defer src="/cinetech/scripts/film.js"></script>
+    <link rel="stylesheet" href="style/series.css">
+    <script defer src="scripts/film.js"></script>
     <title>Cinétech | série</title>
 </head>
 <body>
-    <h1>Trending Movies</h1>
-    <div id="tv-list">
-        
+    <header>
+        <form id="search-form">
+            <input type="text" id="search-input" placeholder="Rechercher...">
+            <button type="submit">Rechercher</button>
+        </form>
+    </header>
+    <h1>Résultats de la recherche</h1>
+    <div id="search-results">
+        <!-- Les résultats de recherche seront affichés ici -->
     </div>
+    <h1>Films du moment</h1>
+    <div id="tv-list">
+        <!-- Les films du moment seront affichés ici -->
+    </div>
+    <script src="scripts/search.js"></script>
 </body>
 </html>
