ajout :     <div id="search-results">
ajout :     <div id="search-results">

--- a/html/film-detail.html
+++ b/html/film-detail.html
@@ -11,11 +11,15 @@
     <form id="search-form">
         <input type="text" id="search-input" placeholder="Rechercher...">
         <button type="submit">Rechercher</button>
-      </form>
+    </form>
 </header>
 <body>
+    <div id="search-results">
+        <!-- Les résultats de recherche seront affichés ici -->
+    </div>
     <div id="tv-details">
 
     </div>
+    <script src="scripts/search.js"></script>
 </body>
 </html>
