Gestions des commentaires :
// Gestion des commentaires sur les pages de détails des films et des séries
// Les utilisateurs peuvent laisser des commentaires sur les éléments du site
// et répondre à des commentaires précédemment laissés.
// Ce script interagit avec l'API pour récupérer, afficher et ajouter des commentaires.

--- a/html/serie-detail.html
+++ b/html/serie-detail.html
@@ -20,6 +20,18 @@
     <div id="tv-details">
 
     </div>
+    
+    <!-- Formulaire de commentaire -->
+    <form id="comment-form">
+        <textarea placeholder="Ajouter un commentaire"></textarea>
+        <button type="submit">Envoyer</button>
+    </form>
+
+    <!-- Section où les commentaires seront affichés -->
+    <div id="comment-section">
+        <!-- Les commentaires existants seront affichés ici -->
+    </div>
+    <script src="scripts/comm.js"></script>
     <script src="scripts/search.js"></script>
 </body>
 </html>
