--- a/html/serie-detail.html
+++ b/html/serie-detail.html
@@ -9,7 +9,7 @@
 </head>
 <header>
     <form id="search-form">
-        <input type="text" id="search-input" placeholder="Rechercher...">
+        <input type="text" id="search-input" placeholder="Rechercher..." autocomplete="off">
         <button type="submit">Rechercher</button>
     </form>
 </header>
