--- a/html/series.html
+++ b/html/series.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <form id="search-form">
-            <input type="text" id="search-input" placeholder="Rechercher...">
+            <input type="text" id="search-input" placeholder="Rechercher..." autocomplete="off">
             <button type="submit">Rechercher</button>
         </form>
     </header>
