Ajout des styles CSS + <div> principale avec la classe "main-bg" :
- Ajout des styles CSS pour la page serie-detail.html afin d'harmoniser avec la mise en page et le style de la page film-detail.html.
- Ajout d'une balise <div> principale avec la classe "main-bg" pour englober le contenu de la page serie-detail.html, permettant ainsi d'appliquer un arrière-plan cohérent.

--- a/html/film.html
+++ b/html/film.html
@@ -18,7 +18,7 @@
             </a>
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="index.html" class="nav-link px-2 text-secondary">Accueil</a></li>
+              <li><a href="index.html" class="nav-link px-2 text-warning">Accueil</a></li>
               <li><a href="film.html" class="nav-link px-2 text-white">Film</a></li>
               <li><a href="series.html" class="nav-link px-2 text-white">Séries</a></li>
             </ul>
@@ -40,9 +40,12 @@
         
       </header>
 
+      <div class="main-bg text-white">
+
     <h1>Films du moment</h1>
     <div id="tv-list">
         <!-- Les films du moment seront affichés ici -->
+    </div>
     </div>
     <script src="scripts/search.js"></script>
 </body>
