--- a/html/serie-detail.html
+++ b/html/serie-detail.html
@@ -18,7 +18,7 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="index.html" class="nav-link px-2 text-secondary">Accueil</a></li>
+          <li><a href="index.html" class="nav-link px-2 text-warning">Accueil</a></li>
           <li><a href="film.html" class="nav-link px-2 text-white">Film</a></li>
           <li><a href="series.html" class="nav-link px-2 text-white">Séries</a></li>
         </ul>
@@ -39,20 +39,38 @@
     </div>
     
   </header>
+  <div class="main-bg"> <!-- Div principale pour le contenu de la page -->
     <div id="tv-details">
-
+        <!-- Contenu des détails de la série -->
     </div>
-    
-    <!-- Formulaire de commentaire -->
-    <form id="comment-form">
-        <textarea placeholder="Ajouter un commentaire"></textarea>
-        <button type="submit">Envoyer</button>
-    </form>
+    <section>
+        <div class="container">
+            <div class="row">
+                <!-- Structure HTML pour les commentaires réels -->
+                <div id="comment-container" class="col-sm-5 col-md-6 col-12 pb-4 bg-black text-white">
+                    <!-- Les commentaires seront ajoutés ici -->
+                </div>
+                <!-- Formulaire pour ajouter un commentaire -->
+                <div class="col-lg-4 col-md-5 col-sm-4 offset-md-1 offset-sm-1 col-12 mt-4">
+                    <form id="comment-form" class="bg-black text-white p-4">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" cols="30" rows="5" class="form-control" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-warning">Post Comment</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 
-    <!-- Section où les commentaires seront affichés -->
-    <div id="comment-section">
-        <!-- Les commentaires existants seront affichés ici -->
-    </div>
     <script src="scripts/comm.js"></script>
     <script src="scripts/search.js"></script>
 </body>
