--- a/html/series.html
+++ b/html/series.html
@@ -18,7 +18,7 @@
             </a>
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="index.html" class="nav-link px-2 text-secondary">Accueil</a></li>
+              <li><a href="index.html" class="nav-link px-2 text-warning">Accueil</a></li>
               <li><a href="film.html" class="nav-link px-2 text-white">Film</a></li>
               <li><a href="series.html" class="nav-link px-2 text-white">Séries</a></li>
             </ul>
@@ -36,14 +36,16 @@
             <div id="search-results">
                 <!-- Les résultats de recherche seront affichés ici -->
             </div>
-        </div>
-        
+        </div>        
       </header>
-    <h1>Trending TV shows</h1>
 
-    <div id="tv-list">
-        <!-- Les séries populaires du moment seront affichées ici -->
-    </div>
+        <div class="main-bg text-white">  
+          <h1>Trending TV shows</h1>
+
+          <div id="tv-list">
+              <!-- Les séries populaires du moment seront affichées ici -->
+          </div>
+        </div>
     <script src="scripts/search.js"></script>
 </body>
 </html>
