--- a/html/film.html
+++ b/html/film.html
@@ -40,7 +40,7 @@
         
       </header>
 
-      <div class="main-bg text-white">
+      <div class="main-bg text-warning text-center">
 
     <h1>Films du moment</h1>
     <div id="tv-list">
