--- a/html/series.html
+++ b/html/series.html
@@ -39,7 +39,7 @@
         </div>        
       </header>
 
-        <div class="main-bg text-white">  
+        <div class="main-bg text-warning text-center">  
           <h1>Trending TV shows</h1>
 
           <div id="tv-list">
