ajout de paginationOnScroll sur les films

--- a/html/film.html
+++ b/html/film.html
@@ -42,7 +42,7 @@
 
       <div class="main-bg text-warning text-center">
 
-    <h1>Films du moment</h1>
+    <h1>Movie</h1>
     <div id="tv-list">
         <!-- Les films du moment seront affichés ici -->
     </div>
