--- a/html/film-detail.html
+++ b/html/film-detail.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV show | details</title>
-    <script defer src="scripts/detail-film.js"></script>
-    <link rel="stylesheet" href="style/detail.css">
+    <script defer src="/cinetech/scripts/detail-film.js"></script>
+    <link rel="stylesheet" href="/cinetech/style/detail.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
@@ -66,7 +66,7 @@
     </section>
   </div>
 
-  <script src="scripts/comm.js"></script>
+  <script src="/cinetech/scripts/comm.js"></script>
   <script src="scripts/search.js"></script>
 </body>
 </html>
