--- a/html/series.html
+++ b/html/series.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/cinetech/style/series.css">
-    <script defer src="/cinetech/scripts/serie.js"></script>
+    <link rel="stylesheet" href="style/series.css">
+    <script defer src="scripts/serie.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
     <title>Cinétech | séries</title>
