--- a/html/film-detail.html
+++ b/html/film-detail.html
@@ -10,30 +10,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-    <header class="p-3 bg-black text-white">
-        <div class="container">
-          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-              <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#logo.png"></use></svg>
-            </a>    
+  <header class="p-3 bg-black text-white">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <img src="logo/logo.png" alt="Nom_de_votre_logo" width="120" height="96">
+            </a>
+
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="index.html" class="nav-link px-2 text-warning">Accueil</a></li>
-              <li><a href="film.html" class="nav-link px-2 text-white">Film</a></li>
-              <li><a href="series.html" class="nav-link px-2 text-white">Séries</a></li>
-            </ul>    
+                <li><a href="index.html" class="nav-link px-2 text-warning">Accueil</a></li>
+                <li><a href="film.html" class="nav-link px-2 text-white">Film</a></li>
+                <li><a href="series.html" class="nav-link px-2 text-white">Séries</a></li>
+            </ul>
+
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" id="search-form">
                 <input type="text" id="search-input" class="form-control" placeholder="Rechercher..." aria-label="Rechercher" autocomplete="off">
-            </form>  
+            </form>
+
             <div class="text-end">
-              <button type="button" class="btn btn-outline-light me-2">Login</button>
-              <button type="button" class="btn btn-warning">Sign-up</button>
+                <button type="button" class="btn btn-outline-light me-2">Login</button>
+                <button type="button" class="btn btn-warning">Sign-up</button>
             </div>
-          </div>
-            <div id="search-results">
-                <!-- Les résultats de recherche seront affichés ici -->
-            </div>
-        </div>       
-      </header>
+        </div>
+        <div id="search-results">
+            <!-- Les résultats de recherche seront affichés ici -->
+        </div>
+    </div>
+</header>
 
     <div class="main-bg">
     <div id="tv-details">
