Patch : Login/Logout/Favorites
1 - Mise en place d'un système de connexion et d'inscription.

2 - Ajout de fonctionnalités JavaScript pour gérer l'inscription et la connexion des utilisateurs.

3 - Intégration de la possibilité pour les utilisateurs de se connecter et de se déconnecter.

4 - Modification de l'interface utilisateur pour afficher les boutons "Favoris" et "Déconnexion" lorsque l'utilisateur est connecté, et les boutons "Login" et "Sign-up" sinon.

5 - Correction des scripts JavaScript pour assurer le bon fonctionnement de la connexion et de la déconnexion.

6 - Adaptation de la page HTML pour refléter les changements dans l'interface utilisateur en fonction de l'état de connexion de l'utilisateur.

--- a/index.html
+++ b/index.html
@@ -10,31 +10,35 @@
     <link rel="stylesheet" href="style/series.css">
 </head>
 <body>
+
     <header class="p-3 bg-black text-white">
         <div class="container">
-          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <img src="logo/logo.png" alt="Netf-list" width="120" height="96">
-            </a>    
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <img src="logo/logo.webp" alt="Netf-list" width="120" height="96">
+                </a>    
 
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="index.html" class="nav-link px-2 text-warning">Home</a></li>
-              <li><a href="film.html" class="nav-link px-2 text-white">Movie</a></li>
-              <li><a href="series.html" class="nav-link px-2 text-white">TV</a></li>
-            </ul>    
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" id="search-form">
-                <input type="text" id="search-input" class="form-control" placeholder="Rechercher..." aria-label="Rechercher" autocomplete="off">
-            </form>  
-            <div class="text-end">
-                <a href="connexion.html" class="btn btn-outline-light me-2">Login</a>
-                <a href="inscription.html" class="btn btn-warning">Sign-up</a>
-            </div>            
-          </div>
-            <div id="search-results">
-                <!-- Les résultats de recherche seront affichés ici -->
-            </div>
-        </div>       
-      </header>
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="index.html" class="nav-link px-2 text-warning">Home</a></li>
+                    <li><a href="film.html" class="nav-link px-2 text-white">Movie</a></li>
+                    <li><a href="series.html" class="nav-link px-2 text-white">TV</a></li>
+                </ul>    
+                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" id="search-form">
+                        <input type="text" id="search-input" class="form-control" placeholder="Rechercher..." aria-label="Rechercher" autocomplete="off">
+                    </form>
+
+                <a href="connexion.html" id="loginBtn" class="btn btn-outline-light me-2">Login</a>
+                <a href="inscription.html" id="signupBtn" class="btn btn-warning">Sign-up</a>
+                
+                <!-- Boutons de favoris et de déconnexion (initiallement cachés) -->
+                <a href="#" id="favorisBtn" style="display: none;" class="btn btn-outline-light me-2"><i class="bi bi-heart"></i></a>
+                <button type="button" id="logoutBtn" style="display: none;" class="btn btn-warning">Logout</button>
+                </div>
+                <div id="search-results">
+                    <!-- Les résultats de recherche seront affichés ici -->
+                </div>
+            </div>       
+        </header>
 
     <div class="main-bg">
         <div class="container">
@@ -54,5 +58,6 @@
     </footer>
 
     <script src="scripts/search.js"></script>
+    <script src="scripts/logout.js"></script>
 </body>
 </html>
