--- a/serie-detail.html
+++ b/serie-detail.html
@@ -56,14 +56,14 @@
                     <form id="comment-form" class="bg-black text-white p-4">
                         <div class="form-group">
                             <label for="name">Name</label>
-                            <input type="text" id="name" class="form-control" required>
+                            <input type="text" id="name" class="form-control bg-black text-white" required autocomplete="off">
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
                             <textarea name="message" id="message" cols="30" rows="5" class="form-control" required></textarea>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-warning">Post Comment</button>
+                            <button type="submit" class="btn btn-warning mt-3">Post Comment</button>
                         </div>
                     </form>
                 </div>
