--- a/film-detail.html
+++ b/film-detail.html
@@ -41,6 +41,7 @@
     </header>
 
     <div class="main-bg">
+      
     <div id="tv-details">
     </div>
     <section>
@@ -70,7 +71,7 @@
       </div>
     </section>
   </div>
-
+  <script src="scripts/addfavoris.js"></script>
   <script src="scripts/comm.js"></script>
   <script src="scripts/search.js"></script>
   <script src="scripts/logout.js"></script>
