Ajout de la fonctionnalité d'ajout aux favoris sur les autres pages :
L'ajout à la liste de favoris se fait en un clic sur le bouton, et l'icône du coeur change de couleur pour indiquer que l'élément a été ajouté avec succès.

La vérification est effectuée pour s'assurer que les éléments déjà présents dans la liste de favoris sont indiqués comme tels, afin d'éviter les doublons.

L'ajout aux favoris est géré en utilisant le stockage local du navigateur, ce qui permet de conserver les favoris même après la fermeture de la page.

--- a/favoris.html
+++ b/favoris.html
@@ -30,7 +30,7 @@
                 <a href="inscription.html" id="signupBtn" class="btn btn-warning">Sign-up</a>
                 
                 <!-- Boutons de favoris et de déconnexion (initiallement cachés) -->
-                <a href="#" id="favorisBtn" style="display: none;" class="btn btn-outline-light me-2"><i class="bi bi-heart"></i></a>
+                <a href="favoris.html" id="favorisBtn" style="display: none;" class="btn btn-outline-light me-2"><i class="bi bi-heart"></i></a>
                 <button type="button" id="logoutBtn" style="display: none;" class="btn btn-warning">Logout</button>
                 </div>
                 <div id="search-results">
@@ -41,7 +41,7 @@
     <!-- Header avec les liens de navigation -->
 
     <div class="container">
-        <h1 class="mt-5 mb-3 text-warning">Mes Favoris</h1>
+        <h1 class="mt-5 mb-3 text-warning text-center bi-heart"> Favorites</h1>
         <div id="favoritesList" class="row">
             <!-- Les favoris seront affichés ici -->
         </div>
