--- a/serie-detail.html
+++ b/serie-detail.html
@@ -31,7 +31,7 @@
                 <a href="inscription.html" id="signupBtn" class="btn btn-warning">Sign-up</a>
                 
                 <!-- Boutons de favoris et de déconnexion (initiallement cachés) -->
-                <a href="#" id="favorisBtn" style="display: none;" class="btn btn-outline-light me-2"><i class="bi bi-heart"></i></a>
+                <a href="favoris.html" id="favorisBtn" style="display: none;" class="btn btn-outline-light me-2"><i class="bi bi-heart"></i></a>
                 <button type="button" id="logoutBtn" style="display: none;" class="btn btn-warning">Logout</button>
                 </div>
                 <div id="search-results">
