--- a/favoris.html
+++ b/favoris.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Footer -->
-
+    <script src="scripts/search.js"></script>
     <script src="scripts/logout.js"></script>
     <script src="scripts/favoris.js"></script>
 </body>
