font + css header
font + css header

--- a/favoris.html
+++ b/favoris.html
@@ -34,11 +34,9 @@
                 <button type="button" id="logoutBtn" style="display: none;" class="btn btn-warning">Logout</button>
                 </div>
                 <div id="search-results">
-                    <!-- Les résultats de recherche seront affichés ici -->
                 </div>
             </div>       
         </header>
-    <!-- Header avec les liens de navigation -->
 
     <div class="container">
         <h1 class="mt-5 mb-3 text-warning text-center bi-heart"> Favorites</h1>
@@ -47,7 +45,13 @@
         </div>
     </div>
 
-    <!-- Footer -->
+    <footer class="py-3 bg-black text-white text-center">
+        <div class="container">
+            <p>Tous droits réservés &copy; 2024</p>
+        </div>
+    </footer>
+    
+    <script src="scripts/header.js"></script>
     <script src="scripts/search.js"></script>
     <script src="scripts/logout.js"></script>
     <script src="scripts/favoris.js"></script>
