--- a/film-detail.html
+++ b/film-detail.html
@@ -71,7 +71,8 @@
       </div>
     </section>
   </div>
-  <script src="scripts/addfavoris.js"></script>
+
+  <script src="scripts/header.js"></script>
   <script src="scripts/comm.js"></script>
   <script src="scripts/search.js"></script>
   <script src="scripts/logout.js"></script>
