--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
                 </a>    
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="index.html" class="nav-link px-2 text-warning">Home</a></li>
-                    <li><a href="film.html" class="nav-link px-2 text-white">Movie</a></li>
-                    <li><a href="series.html" class="nav-link px-2 text-white">TV</a></li>
-                </ul>    
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link px-2 text-warning">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="film.html" class="nav-link px-2 text-white">Movie</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="series.html" class="nav-link px-2 text-white">TV</a>
+                    </li>
+                </ul>
+                    
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" id="search-form">
                         <input type="text" id="search-input" class="form-control" placeholder="Rechercher..." aria-label="Rechercher" autocomplete="off">
                     </form>
