head title / search.js online
head title / search.js online

--- a/serie-detail.html
+++ b/serie-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netf-list | TV</title>
+    <title>Netflist | TV</title>
     <link rel="icon" href="logo/logo.webp" type="image/x-icon" alt="Logo" class="logo">
     <script defer src="scripts/serie-details.js"></script>
     <link rel="stylesheet" href="style/detail.css">
