--- a/film.html
+++ b/film.html
@@ -7,7 +7,7 @@
     <script defer src="scripts/film.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-    <title>Netf-list | TV</title>
+    <title>Netflist | Movie</title>
     <link rel="icon" href="logo/logo.webp" type="image/x-icon" alt="Logo" class="logo">
 </head>
 <body>
