--- a/inscription.html
+++ b/inscription.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netf-list | Sign-up</title>
+    <title>Netflist | Sign-up</title>
     <link rel="icon" href="logo/logo.webp" type="image/x-icon" alt="Logo" class="logo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
